fixed spacing

--- a/static/css/styles/components/_trips.css
+++ b/static/css/styles/components/_trips.css
@@ -2,14 +2,15 @@
 .trip-details {
     display: flex;
     justify-content: center;
-    gap: 24px;
-    margin-bottom: 24px;
+    gap: 16px;
+    margin-bottom: 16px;
     flex-wrap: wrap
   }
   
   .trip-detail-item {
     display: flex;
     align-items: center;
+    margin-bottom: -16px;
     gap: 8px;
     color: var(--g-m);
     font-size: 16px
